@@ -80,6 +80,7 @@
 		<div id="profile" class="page">
 			<div class="toolbar">
 				<a href="" class="button"></a>
+				<p><a href="http://twitter.com/#!/" target="_blank"><img src="img/buttons/twitter.png" /></a></p>
 
 				<div class="clearer"></div>
 			</div>
