@@ -1,4 +1,5 @@
 In development
+	+ Link to the twitter.com page on the profile page
 	* Larger avatars on the profile page allowed, up to 96px in width
 	* Small bug with friendship cache updater fixed
 
